fix bug nav mobile flicker

--- a/style.css
+++ b/style.css
@@ -231,18 +231,17 @@ footer p {
 }
 
 #mobile-menu-toggle input:checked ~ .nav-wrapper {
-	visibility: visible;
-	height: 100vh;
+	opacity: 1;
 }
 
 #mobile-menu-toggle input:checked ~ .nav-wrapper .nav-mobile-item {
-	visibility: visible;
+	opacity: 1;
 }
 
 .nav-mobile .nav-wrapper {
-	visibility: hidden;
+	opacity: 0;
 	position: absolute;
-	height: 0;
+	height: 100vh;
 	list-style-type: none;
 	width: 180px;
 	box-shadow: 0 0 10px #191718;
@@ -258,7 +257,7 @@ footer p {
 .nav-mobile-item {
 	width: 100%;
 	transition-delay: 0.5s;
-	visibility: hidden;
+	opacity: 0;
 }
 
 .nav-mobile-item a {
